package controller

import (
	"context"
	"net/http"

	"github.com/gin-gonic/gin"

	"github.com/chientranthien/goldenpay/internal/common"
	httpcommon "github.com/chientranthien/goldenpay/internal/common/http"
	"github.com/chientranthien/goldenpay/internal/proto"
)

// Channel controllers
type CreateChannelController struct {
	chatClient proto.ChatServiceClient
}

type CreateChannelBody struct {
	Name        string   `json:"name"`
	Description string   `json:"description"`
	Type        string   `json:"type"`
	MemberIds   []uint64 `json:"member_ids"`
}

type CreateChannelData struct {
	ChannelId uint64 `json:"channel_id"`
}

func NewCreateChannelController(chatClient proto.ChatServiceClient) *CreateChannelController {
	return &CreateChannelController{chatClient: chatClient}
}

func (c *CreateChannelController) Take(ctx context.Context, req httpcommon.Req) common.Code {
	// Validation will be done by the HTTP framework
	return common.CodeSuccess
}

func (c *CreateChannelController) Do() (interface{}, common.Code) {
	return nil, common.CodeSuccess
}

// Get channel controller
type GetChannelController struct {
	chatClient proto.ChatServiceClient
}

type GetChannelData struct {
	Channel *proto.Channel `json:"channel"`
}

func NewGetChannelController(chatClient proto.ChatServiceClient) *GetChannelController {
	return &GetChannelController{chatClient: chatClient}
}

func (c *GetChannelController) Take(ctx context.Context, req httpcommon.Req) common.Code {
	return common.CodeSuccess
}

func (c *GetChannelController) Do() (interface{}, common.Code) {
	return nil, common.CodeSuccess
}

// List channels controller
type ListChannelsController struct {
	chatClient proto.ChatServiceClient
}

type ListChannelsBody struct {
	Pagination *proto.Pagination `json:"pagination"`
}

type ListChannelsData struct {
	Channels       []*proto.Channel  `json:"channels"`
	NextPagination *proto.Pagination `json:"next_pagination"`
}

func NewListChannelsController(chatClient proto.ChatServiceClient) *ListChannelsController {
	return &ListChannelsController{chatClient: chatClient}
}

func (c *ListChannelsController) Take(ctx context.Context, req httpcommon.Req) common.Code {
	return common.CodeSuccess
}

func (c *ListChannelsController) Do() (interface{}, common.Code) {
	return nil, common.CodeSuccess
}

// Send message controller
type SendMessageController struct {
	chatClient proto.ChatServiceClient
}

type SendMessageBody struct {
	ChannelId   uint64                 `json:"channel_id"`
	Content     string                 `json:"content"`
	MessageType string                 `json:"message_type"`
	Metadata    *proto.MessageMetadata `json:"metadata"`
}

type SendMessageData struct {
	MessageId uint64 `json:"message_id"`
}

func NewSendMessageController(chatClient proto.ChatServiceClient) *SendMessageController {
	return &SendMessageController{chatClient: chatClient}
}

func (c *SendMessageController) Take(ctx context.Context, req httpcommon.Req) common.Code {
	return common.CodeSuccess
}

func (c *SendMessageController) Do() (interface{}, common.Code) {
	return nil, common.CodeSuccess
}

// Get messages controller
type GetMessagesController struct {
	chatClient proto.ChatServiceClient
}

type GetMessagesBody struct {
	Pagination *proto.Pagination `json:"pagination"`
}

type GetMessagesData struct {
	Messages       []*proto.Message  `json:"messages"`
	NextPagination *proto.Pagination `json:"next_pagination"`
}

func NewGetMessagesController(chatClient proto.ChatServiceClient) *GetMessagesController {
	return &GetMessagesController{chatClient: chatClient}
}

func (c *GetMessagesController) Take(ctx context.Context, req httpcommon.Req) common.Code {
	return common.CodeSuccess
}

func (c *GetMessagesController) Do() (interface{}, common.Code) {
	return nil, common.CodeSuccess
}

// WebSocket controller for real-time messaging
func HandleWebSocket(hub interface{}, chatClient proto.ChatServiceClient) gin.HandlerFunc {
	return func(ctx *gin.Context) {
		// This will be implemented with the WebSocket hub
		ctx.JSON(http.StatusNotImplemented, gin.H{
			"message": "WebSocket endpoint - implementation pending",
		})
	}
}
